# joining-kubeconfigs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
tests/fixtures/: cluster1.yaml  cluster2.yaml  cluster3.yaml  cluster4.yaml  duplicate-cluster.yaml
