[package]
name = "kconf"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to join kubeconfig files"
license = "MIT"

[[bin]]
name = "kconf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
